Tex boxes and paragraph x offset together #40204

Closed
opened 2014-05-15 07:30:42 +02:00 by Fazekas Laszlo · 6 comments
Member

System Information
Ubuntu 12.10 x86-64 nvidia 610

Blender Version
Broken: 2.70a f93bc76
Worked: (optional)

In a text object, the paragraph's X offset parameter moves the text box as well. It is a confusing behaviour in my opinion, but the most strange thing happens when using center, right or justify modes. In these cases the texbox moves differently (twice as much, I think) than the text itself, so the text can go completely out from the box. In justify mode, it seems the left side of the text moves together with the box but the right side remains at its original position.

Exact steps for others to reproduce the error
Create a text object. At the text properties (the F icon) set the text box and try to change the paragraph's X offset.

**System Information** Ubuntu 12.10 x86-64 nvidia 610 **Blender Version** Broken: 2.70a f93bc76 Worked: (optional) In a text object, the paragraph's X offset parameter moves the text box as well. It is a confusing behaviour in my opinion, but the most strange thing happens when using center, right or justify modes. In these cases the texbox moves differently (twice as much, I think) than the text itself, so the text can go completely out from the box. In justify mode, it seems the left side of the text moves together with the box but the right side remains at its original position. **Exact steps for others to reproduce the error** Create a text object. At the text properties (the F icon) set the text box and try to change the paragraph's X offset.
Author
Member

Changed status to: 'Open'

Changed status to: 'Open'
Author
Member

Added subscriber: @totoro-4

Added subscriber: @totoro-4
Author
Member
[textbox.blend](https://archive.blender.org/developer/F89024/textbox.blend)

This issue was referenced by e5b8d84613

This issue was referenced by e5b8d84613f3aa808adf275ea3e0dbec2d484915

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Closed by commit e5b8d84613.

Closed by commit e5b8d84613.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#40204
No description provided.