Fix T40204: x-offset textbox failed with center/justify/flush