source/blender/blenkernel/intern/font.c
@@ -815,7 +815,7 @@ makebreak:
 			}
 		}
 		else if (cu->spacemode == CU_MIDDLE) {
-			for (i = 0; i < lnr; i++) linedata[i] = (linedata3[i] - linedata[i]) / 2;
+			for (i = 0; i < lnr; i++) linedata[i] = ((linedata3[i] - linedata[i]) + cu->xof) / 2;
 			for (i = 0; i <= slen; i++) {
 				ct->xof += linedata[ct->linenr];
 				ct++;
@@ -824,7 +824,7 @@ makebreak:
 		else if ((cu->spacemode == CU_FLUSH) && (cu->tb[0].w != 0.0f)) {
 			for (i = 0; i < lnr; i++)
 				if (linedata2[i] > 1)
-					linedata[i] = (linedata3[i] - linedata[i]) / (linedata2[i] - 1);
+					linedata[i] = ((linedata3[i] - linedata[i]) + cu->xof) / (linedata2[i] - 1);
 			for (i = 0; i <= slen; i++) {
 				for (j = i; (!ELEM3(mem[j], '\0', '\n', '\r')) && (chartransdata[j].dobreak == 0) && (j < slen); j++) {
 					/* do nothing */
@@ -849,7 +849,8 @@ makebreak:
 				if ((mem[j] != '\r') && (mem[j] != '\n') &&
 				    ((chartransdata[j].dobreak != 0)))
 				{
-					if (mem[i] == ' ') curofs += (linedata3[ct->linenr] - linedata[ct->linenr]) / linedata4[ct->linenr];
+					if (mem[i] == ' ')
+						curofs += ((linedata3[ct->linenr] - linedata[ct->linenr]) + cu->xof) / linedata4[ct->linenr];
 					ct->xof += curofs;
 				}
 				if (mem[i] == '\n' || mem[i] == '\r' || chartransdata[i].dobreak) curofs = 0;
